data/diff_tests/wasmtime/call_indirect_IncorrectHandlingofControlFlowAcrossModuleBoundaries_4735.wast.bin.wast
(assert_invalid
  (module binary
    "\00\61\73\6d\01\00\00\00\01\87\80\80\80\00\01\60"
    "\02\7f\7f\01\7f\02\90\80\80\80\00\01\03\65\6e\76"
    "\08\66\75\6e\63\5f\73\69\67\00\00\03\82\80\80\80"
    "\00\01\00\04\84\80\80\80\00\01\70\00\01\09\87\80"
    "\80\80\00\01\00\41\00\0b\01\00\0a\91\80\80\80\00"
    "\01\8b\80\80\80\00\00\41\00\20\00\20\01\11\00\00"
    "\0b"
  )
""
)